back and front end

--- a/css/base.css
+++ b/css/base.css
@@ -2,14 +2,14 @@
 
 
 /* Style the thumbnails */
-.pika-thumbs{ padding: 0 23px; height: 75px; margin: 20px auto 0 auto; display: inline-block;}
-	.pika-thumbs li{ width: 150px; height: 110px; margin: 10px 10px 0 0px; overflow: hidden;
+.pika-thumbs{ padding: 0 30px; height: 75px; margin: 20px auto 0 auto; display: inline-block; width: 500px;}
+	.pika-thumbs li{ width: 140px; height: 110px; margin: 10px 6px 0 0px; overflow: hidden;
 		float: left; list-style-type: none; background: #fafafa; border: 1px solid #e5e5e5; cursor: pointer;}
 	.pika-thumbs li .clip {position:relative;height:100%;text-align: center; vertical-align: middle; overflow: hidden;}
 	
 /* The stage is the wrapper. The image fills 100% the height of the stage */
 .pika-stage, .pika-textnav {width: 500px;}
-.pika-stage {position: relative; background: #f8f8f8; border: 1px solid #ddd; padding: 10px 10px 40px 10px; text-align:center; height: auto;display: inline-block;}
+.pika-stage {position: relative; background: #f8f8f8; border: 1px solid #ddd; padding: 10px 10px 40px 10px; text-align:center; height: auto;display: inline-block; box-sizing:content-box;}
 .pika-stage img{width: 100%;box-shadow: 0 0 3px 1px rgba(116, 65, 80, 0.5);}
 .pika-stage .caption {position: absolute; background: #000; background: #744150;  border: 1px solid #5F2B3A; font-size: 11px; 
 			color: #fafafa; padding: 10px; text-align: right; bottom: 50px; right: 9px;}
@@ -24,7 +24,7 @@
 
 /* The previous and next textual buttons */
 .pika-textnav {overflow: hidden; margin: 10px 0 0 0;bottom:10px; position:absolute;}
-.pika-textnav a {font-size: 12px; text-decoration: none; color: #333; padding: 4px;}
+.pika-textnav a { text-decoration: none; color: #333;}
 	.pika-textnav a.previous {float: left; width: auto; display: block;}
 	.pika-textnav a.next {float: right; width: auto; display: block;}
 
