--- a/css/main.css
+++ b/css/main.css
@@ -766,7 +766,6 @@ p
 	input[type="text"]
 	{
 		float: left;
-		width: 20%;
 		margin: 0 10px 0 0;
 		height: 40px;
 		line-height: 40px;
@@ -884,32 +883,33 @@ akhir main
 	-moz-transition: all .8s ease;
 	-o-transition: all .8s ease;
 	-ms-transition: all .8s ease;
+	
+
+	display: inline-block;
+
 }
 .footer-search:hover,.footer-search:active
 {
 	box-shadow: 0 0 6px #744150;
 }
 .footer-link-ext
-{
-	float:left;	
-	width: auto;
+{	
 	cursor:pointer;
-	border-radius: 0px;
+	border-radius: 6px;
+	padding: 10px 5px;
+	margin: 0 10px;
+	display: inline-block;
 }
-.footer-link-ext a
-{
-	float:left;	
-	color: #aaa;
-	
-	line-height: 40px;
-}
-.footer-link-ext:hover {
+
+.button-bot-hover {
 	background-color:#744150;	
-	/*box-shadow: inset 0 0 12px #744150;*/
+	color: white;
+	box-shadow: inset 0 0 12px #3A2D31;
 }
-.footer-link-ext:hover a {
-		color:white;
+.button-bot-hover:hover{
+	color: white;
 }
+
 #collection{
 	width: 100%;
 	background: #aaa;
@@ -919,10 +919,11 @@ akhir main
 }
 
 .footer-socmed
-{
-	float:left;	
+{	
+	display: inline-block;
 	line-height: 40px;
 	color: #aaa;
+	float: right;
 }
 .trans-all{
 	-webkit-transition: all .8s ease;
