--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,11 @@ p
  clear:both;
  text-align:center;	
  padding: 10px 0 0 0;
+ font-style: italic;
+ font-size: 40px;
+ font-weight: bold;
+ color: #744150;
+ text-shadow: 1px 1px 3px #5E2727;
 }
 .story-container
 {
