--- a/css/main.css
+++ b/css/main.css
@@ -6,23 +6,21 @@
 	width:100%;
 	height:100%;
 	margin:15% 0 0 0;
+	color: #744150;
 	text-align:center;
 	text-shadow: -1px -1px 8px #888;
 }
-.splash1
-{
-	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:15px;	
-}
+.splash1, 
 .splash2
 {
-		font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size:15px;	
 }
 .splash3
 {
 	font-size:100px;	
 	font-family:dale;
+	position: relative;
 }
 *{	
 	text-decoration: none;
@@ -213,6 +211,7 @@ p
  font-weight: bold;
  color: #744150;
  text-shadow: 1px 1px 3px #5E2727;
+ font-family: serif;
 }
 .story-container
 {
@@ -713,6 +712,10 @@ p
 		list-style: none;
 		padding: 10px 0 0 0;
 	}
+	.categ-container h3,.arcv-container h3,.tags-container h3
+	{
+		color:#744150;
+	}
 	.categ-container ul li,.arcv-container ul li
 	{
 		padding: 10px 0;
@@ -770,6 +773,7 @@ p
 	.contact-info-wrap{
 		padding: 20px 0 10px 40px;
 	
+		color: #744150;
 }
 	.contact-info {
 		display: block;
@@ -832,20 +836,16 @@ p
 		padding: 0 10%;
 		float:left;
 	}
-	.contact-container h3
-	{
-		font-size: 30px;
-		padding: 10px 0;	
-	}
 	.contact-container p
 	{
 		padding: 10px 0;	
 	}
-	.contact-container h5
+	.contact-container h3, .contact-container h4, .contact-container h5
 	{
 		font-size: 30px;
-		padding: 30px 0 0 0;	
-	}
+		padding: 10px 0 0 0;
+		color: #744150;
+}
 	/* ====================================================
 					akhir contact.php
 	=======================================================*/
@@ -1141,7 +1141,7 @@ table.pageme td {
 	box-shadow:0 0 2px #744150;
 	display:inline-block;
 	color:white;
-	z-index: 999999;
+	z-index: 9999999;
 }
 .anchor:hover
 {
