--- a/css/style2.css
+++ b/css/style2.css
@@ -21,13 +21,14 @@
 	margin-top:-15px;
 	outline:none;
 	cursor:pointer;
+	z-index: 9999;
 }
 .thumb_wrapper a.prev{
-	left: -10px;
+	left: 10px;
 	background:transparent url(../img/fancy_nav_left.png) no-repeat top left;
 }
 .thumb_wrapper a.next{
-	right: -10px;
+	right: 10px;
 	background:transparent url(../img/fancy_nav_right.png) no-repeat top left;
 }
 .thumb_wrapper span{
@@ -39,8 +40,8 @@
 }
 .thumb{
 	margin: auto;
-	width: 500px;
-	height: 500px;
+	width: 650px;
+	height: 650px;
 	overflow:hidden;
 	border: 1px solid #DDD;
 }
@@ -54,5 +55,5 @@
 }
 .thumb ul li a img{
 	border:5px solid #fff;
-	width: 500px;
+	width: 650px;
 }
