--- a/css/main.css
+++ b/css/main.css
@@ -119,19 +119,6 @@ p
 {
 	width:100%;
 	height:100%;	
-	-webkit-filter: grayscale(100%);
-  -moz-filter: grayscale(100%);
-  -ms-filter: grayscale(100%);
-  -o-filter: grayscale(100%);
-  filter: grayscale(100%);
-}
-.logo-img-container img:hover
-{
-	-webkit-filter: grayscale(0);
-	-moz-filter: grayscale(0);
-	-ms-filter: grayscale(0);
-	-o-filter: grayscale(0);
-	filter: grayscale(0);
 }
 .nav-menu-container
 {	
@@ -790,7 +777,7 @@ text-shadow: 1px 1px 3px #5E2727;
 	input {
 		margin: 10px 0;
 	}
-	input[type="text"]
+	input[type="text"],input[type="password"]
 	{
 		float: left;
 		margin: 10px 0 0 0;
@@ -809,7 +796,7 @@ text-shadow: 1px 1px 3px #5E2727;
 		-ms-transition: all .8s ease;
 		font-family: unica;
 	}
-	input[type="text"]:hover,input[type="text"]:active
+	input[type="text"]:hover,input[type="text"]:active,input[type="password"]:hover,input[type="password"]:active
 	{
 		box-shadow: 0 0 6px #744150;
 	}
@@ -937,7 +924,7 @@ text-shadow: 1px 1px 3px #5E2727;
 		}
 	.backend_main {
 		margin:0 0 0 15%;
-		min-width:85%;
+		max-width:85%;
 		min-height:100%;
 		padding: 30px;
 		height:auto;
@@ -957,6 +944,10 @@ text-shadow: 1px 1px 3px #5E2727;
 	.backend_main .input-wrap label{
 		display: inline-block;
 		margin: 0 20px 0 0;
+		min-width: 200px;
+	}
+	.backend-thumb {
+		width: 200px;
 	}
 
 table {
@@ -985,10 +976,10 @@ th {
     white-space: nowrap;
 }
 tbody th {
-	background-color: #2ea879;
+	background-color: #744150;
 }
 tbody tr:nth-child(2n-1) {
-    background-color: #f5f5f5;
+    background-color: #f7e5e5;
     transition: all .125s ease-in-out;
 }
 tbody tr:hover {
@@ -998,7 +989,7 @@ tbody tr:hover {
 /* For appearance */
 .sticky-wrap {
 	overflow-x: auto;
-	overflow-y: auto;
+	overflow-y: hidden;
 	position: relative;
 	width: 100%;
 }
@@ -1040,6 +1031,7 @@ td.user-name {
 	overflow-y: auto;
 	max-height: 80vh;
 }
+
 
 
 	
@@ -1107,10 +1099,13 @@ akhir main
 
 #collection{
 	width: 100%;
-	background: #aaa;
+	background: #C19CA7;
 	display: block;
 	position: absolute;
 	bottom: 70px;
+}
+#collection .title {
+	color: #744150;
 }
 
 .footer-socmed
